# mpi_rma_stack

./: README.md
sources/: CMakeLists.txt  build_debug_linux_x86_64.sh  build_release_linux_x86_64.sh  conanfile.txt  run_debug_treiber_stack_simple_push_pop_task_app.sh  run_release_treiber_stack_simple_push_pop_task_app.sh
sources/apps/: main_centralized_memory_pool_app.cpp  main_rma_central_list_simple_push_pop_task_app.cpp  main_rma_inner_stack_simple_push_pop_task_app.cpp  main_rma_treiber_central_stack_only_pop_benchmark_app.cpp  main_rma_treiber_central_stack_only_push_benchmark_app.cpp  main_rma_treiber_central_stack_producer_consumer_benchmark_app.cpp  main_rma_treiber_central_stack_random_operation_benchmark_app.cpp  main_rma_treiber_central_stack_simple_push_pop_task_app.cpp  main_rma_treiber_decentralized_stack_only_pop_benchmark_app.cpp  main_rma_treiber_decentralized_stack_only_push_benchmark_app.cpp  main_rma_treiber_decentralized_stack_producer_consumer_benchmark_app.cpp  main_rma_treiber_decentralized_stack_random_operation_benchmark_app.cpp  main_rma_treiber_decentralized_stack_simple_push_pop_task_app.cpp  main_rma_treiber_stack_app.cpp  main_rma_treiber_stack_simple_push_pop_task_app.cpp
sources/include/: centralized_memory_pool_tasks.h  list_tasks.h  logging.h  stack_tasks.h  stack_tasks.hpp
sources/libs/: CMakeLists.txt
sources/libs/custom_mpi_extensions/: CMakeLists.txt
sources/libs/custom_mpi_extensions/include/: MpiException.h  MpiException.hpp  MpiWinWrapper.h  rma.h
sources/libs/custom_mpi_extensions/src/: MpiException.cpp  MpiWinWrapper.cpp  rma.cpp
sources/libs/list_interface/: CMakeLists.txt
sources/libs/list_interface/include/: IList.h
sources/libs/lock_free_stack_interface/: CMakeLists.txt
sources/libs/lock_free_stack_interface/include/: IStack.hpp
sources/libs/memory_pool/: CMakeLists.txt
sources/libs/memory_pool/include/: CentralizedMemoryPool.h  memory_pool.h
sources/libs/memory_pool/src/: CentralizedMemoryPool.cpp  memory_pool.cpp
sources/libs/rma_list/: CMakeLists.txt
sources/libs/rma_list/include/: CentralNode.h  DistribNode.h  Node.h  RmaCentralList.h  RmaDistribList.h
sources/libs/rma_list/src/: list.cpp
sources/libs/rma_stack/: CMakeLists.txt
sources/libs/rma_stack/include/: Backoff.h  CentralNode.h  CountedNode.h  DistribNode.h  RmaCentralStackFabric.h  RmaStackFabric.h  RmaTreiberCentralStack.h  RmaTreiberStack.h
sources/libs/rma_stack/include/inner/: CountedNodePtr.h  InnerStack.h  Node.h  ref_counting.h
sources/libs/rma_stack/include/outer/: Backoff.h  RmaTreiberCentralStack.h  RmaTreiberDecentralizedStack.h
sources/libs/rma_stack/src/: Backoff.cpp  CountedNode.cpp  RmaStackFabric.cpp  RmacentralStackFabric.cpp  list.cpp  stack.cpp
sources/libs/rma_stack/src/inner/: CountedNodePtr.cpp  InnerStack.cpp  Node.cpp  ref_counting.cpp
sources/libs/rma_stack/src/outer/: Backoff.cpp
sources/libs/rma_treiber_stack/: CMakeLists.txt
sources/libs/rma_treiber_stack/include/: RmaTreiberStack.hpp
sources/libs/stack_interface/: CMakeLists.txt
sources/libs/stack_interface/include/: IStack.h  IStack.hpp
sources/profiles/: x86_64
sources/scripts/: build_debug_linux_x86_64.sh  build_release_linux_x86_64.sh  create_logs_example.py  plot_benchmark.py  plot_centralized_vs_decentralized_benchmark.py  plot_producer_consumer_benchmark.py  plot_producer_consumer_centralized_vs_decentralized_benchmark.py  plot_random_operation_centralized_vs_decentralized_benchmark.py  run_debug_centralized_memory_pool_app.sh  run_debug_inner_stack_simple_push_pop_task_app.sh  run_debug_treiber_central_stack_only_pop_benchmark_app.sh  run_debug_treiber_central_stack_only_push_benchmark_app.sh  run_debug_treiber_central_stack_producer_consumer_benchmark_app.sh  run_debug_treiber_central_stack_random_operation_benchmark_app.sh  run_debug_treiber_central_stack_simple_push_pop_task_app.sh  run_debug_treiber_decentralized_stack_only_pop_benchmark_app.sh  run_debug_treiber_decentralized_stack_only_push_benchmark_app.sh  run_debug_treiber_decentralized_stack_producer_consumer_benchmark_app.sh  run_debug_treiber_decentralized_stack_random_operation_benchmark_app.sh  run_debug_treiber_decentralized_stack_simple_push_pop_task_app.sh  run_debug_treiber_stack_simple_push_pop_task_app.sh  run_release_centralized_memory_pool_app.sh  run_release_inner_stack_simple_push_pop_task_app.sh  run_release_treiber_central_stack_only_pop_benchmark_app.sh  run_release_treiber_central_stack_only_push_benchmark_app.sh  run_release_treiber_central_stack_producer_consumer_benchmark_app.sh  run_release_treiber_central_stack_random_operation_benchmark_app.sh  run_release_treiber_central_stack_simple_push_pop_task_app.sh  run_release_treiber_decentralized_stack_only_pop_benchmark_app.sh  run_release_treiber_decentralized_stack_only_push_benchmark_app.sh  run_release_treiber_decentralized_stack_producer_consumer_benchmark_app.sh  run_release_treiber_decentralized_stack_random_operation_benchmark_app.sh  run_release_treiber_decentralized_stack_simple_push_pop_task_app.sh  run_release_treiber_stack_simple_push_pop_task_app.sh
sources/src/: centralized_memory_pool_tasks.cpp  logging.cpp  stack_tasks.cpp
